@@ -2,11 +2,13 @@ package com.reliaquest.api.controller;
 
 import com.reliaquest.api.dto.EmployeeDto;
 import com.reliaquest.api.dto.EmployeeInput;
+import com.reliaquest.api.exception.ResourceNotFoundException;
 import com.reliaquest.api.service.EmployeeService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.ResponseEntity;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -56,23 +58,13 @@ class EmployeeControllerTest {
 
     @Test
     void testGetEmployeeById_found() {
-        when(employeeService.getEmployeeById("1")).thenReturn(Optional.of(makeEmployee("1", "John", 1000)));
+        when(employeeService.getEmployeeById("1")).thenReturn(makeEmployee("1", "John", 1000));
 
         ResponseEntity<EmployeeDto> response = controller.getEmployeeById("1");
 
         assertEquals(200,response.getStatusCode().value());
         assertEquals("John", response.getBody().getEmployeeName());
         verify(employeeService).getEmployeeById("1");
-    }
-
-    @Test
-    void testGetEmployeeById_notFound() {
-        when(employeeService.getEmployeeById("2")).thenReturn(Optional.empty());
-
-        ResponseEntity<EmployeeDto> response = controller.getEmployeeById("2");
-
-        assertEquals(404,response.getStatusCode().value());
-        assertNull(response.getBody());
     }
 
     @Test
@@ -88,12 +80,14 @@ class EmployeeControllerTest {
 
     @Test
     void testGetTopTenHighestEarningEmployeeNames() {
-        when(employeeService.getTopTenHighestEarningEmployeeNames()).thenReturn(List.of("John", "Jane"));
+        EmployeeDto e1 = mock(EmployeeDto.class);
+        List<EmployeeDto> expected = Collections.singletonList(e1);
+        when(employeeService.getTopTenHighestEarningEmployeeNames()).thenReturn(expected);
 
-        ResponseEntity<List<String>> response = controller.getTopTenHighestEarningEmployeeNames();
+        ResponseEntity<List<EmployeeDto>> response = controller.getTopTenHighestEarningEmployeeNames();
 
         assertEquals(200,response.getStatusCode().value());
-        assertEquals(List.of("John", "Jane"), response.getBody());
+        assertEquals(expected, response.getBody());
         verify(employeeService).getTopTenHighestEarningEmployeeNames();
     }
 
@@ -114,7 +108,7 @@ class EmployeeControllerTest {
     void testDeleteEmployeeById_success() {
         when(employeeService.deleteEmployeeById("John")).thenReturn(true);
 
-        ResponseEntity<String> response = controller.deleteEmployeeById("John");
+        ResponseEntity<String> response = controller.deleteEmployeeByName("John");
 
         assertEquals(200,response.getStatusCode().value());
         assertEquals("John", response.getBody());
@@ -125,7 +119,7 @@ class EmployeeControllerTest {
     void testDeleteEmployeeById_failure() {
         when(employeeService.deleteEmployeeById("John")).thenReturn(false);
 
-        ResponseEntity<String> response = controller.deleteEmployeeById("John");
+        ResponseEntity<String> response = controller.deleteEmployeeByName("John");
 
         assertEquals(500, response.getStatusCode().value());
         assertEquals("Failed to delete employee", response.getBody());
